# football-parser

./: .gitignore  README.md  main.py  pipitor.py  pyproject.toml
